--- a/index.html
+++ b/index.html
@@ -38,23 +38,23 @@
             <a href="/"><img class="logoimg" src="/media/tbmlogoShdNoBkg.png" width=160></a>
             <nav>
                 <div class="row">
-                    <div class="colL">
+                    <div class="navcolL">
                         <h1><a href=#Experience>
                         Experience
                         </a></h1>
                     </div>
-                    <div class="colL">
+                    <div class="navcolL">
                         <h1><a href=#Portfolio>
                         Portfolio
                         </a></h1>
                     </div>
-                    <div class="colC"></div>
-                    <div class="colR">
+                    <div class="navcolC"></div>
+                    <div class="navcolR">
                         <h1><a href=#Contact>
                         Contact
                         </a></h1>
                     </div>
-                    <div class="colR">
+                    <div class="navcolR">
                         <h1><a href=#Active_Projects>
                         Active Projects
                         </a></h1>
@@ -89,6 +89,49 @@
             </a></h1>
             <div class="item">
                 <div class="colL">
+                    <div class="img">
+                        <img src="media/DSSBP_ex1.png" width=92%>
+                    </div>
+                    <div class="img">
+                        <img src="media/DSSBP_ex2.png" width=92%>
+                    </div>
+                    <div class="img">
+                        <img src="media/DSSBP_ex3.png" width=92%>
+                    </div>
+                    <div class="img">
+                        <img src="media/DSSBP_ex4.png" width=92%>
+                    </div>
+                </div>
+                <div class="colR">
+                    <div>
+                        <h2>
+                            DSSBadge+
+                        </h2>
+                        <p>
+                            A revamp of UC Davis Campus Ready's <a href="https://campusready.ucdavis.edu/symptom-survey" style="color: #bf77ff" target="_blank">Daily Symptom Survey</a> badge system, intended to be less prone to tampered survey results.
+                            It is a Python package with extensive documentation and examples designed to be simple yet developer-friendly.<br><br>
+                            It completed over the course of 24 hours and submitted as part of the HackDavis2022 hackathon.
+                        </p>
+                    </div>
+                    <div>
+                        <a href="https://github.com/kywillpickle/DSSBadgePlus" target="_blank"><button>
+                            <div class="button githubButton" style="display:inline-grid; height: 65px; width: 195px; align-items: center; justify-items: center; overflow: hidden;">
+                                <img style="grid-column: 1;" src="media/logoGH.png" width=60px>
+                                <span style="align-content: left; grid-column: 2; margin-top: 8px; font-family: retrograde, sans-serif; font-size: x-large; color: white;">Github</span>
+                            </div>
+                        </button></a>
+                        <a href="https://devpost.com/software/dssbadge" target="_blank"><button>
+                            <div class="button devpostButton" style="display:inline-grid; height: 65px; width: 215px; align-items: center; justify-items: center; overflow: hidden;">
+                                <img style="grid-column: 1;" src="media/logoDEV.png" width=60px>
+                                <span style="grid-column: 2; margin-top: 8px; font-family: retrograde, sans-serif; font-size: x-large; color: white;">Devpost</span>
+                            </div>
+                        </button></a>
+                    </div>
+                </div>
+            </div>
+            <!-- <h2><hr class="seperator"></h2> -->
+            <div class="item">
+                <div class="colL2">
                     <div>
                         <h2>
                             Arboretum Gallerium
@@ -113,7 +156,7 @@
                         </button></a>
                     </div>
                 </div>
-                <div class="colR">
+                <div class="colR2">
                     <div class="img">
                         <img src="media/AGScrSho1.png" width=92%>
                     </div>
@@ -174,17 +217,17 @@
                     </button></a>
                 </div>
             </div>
-            <h2><hr class="seperator"></h2>
+            <!-- <h2><hr class="seperator"></h2> -->
             <div class="item">
                 <div class="colR2">
                     <div>
                         <div class="img">
-                            <img src="media/FCsr1.gif" width=92%>
+                            <img src="media/FCsr1.gif" width=96%>
                         </div>
                     </div>
                     <div>
                         <div class="img">
-                            <img src="media/FCsc1.png" width=92%>
+                            <img src="media/FCsc1.png" width=96%>
                         </div>
                     </div>
                 </div>
@@ -214,11 +257,11 @@
             <h1><a id="Contact">
                 Contact<hr>
             </a></h1>
-            <div class="colL">
+            <div>
                 <h3 style="float: right; padding-left:10px; padding-right: 25px;"><a href="mailto: kwpickle@ucdavis.edu">kwpickle@ucdavis.edu</a></h3>
                 <a href="mailto: kwpickle@ucdavis.edu"><img src="media/logoEMAIL.png" width=60px style="float: right;"></a>
             </div>
-            <div class="colR">
+            <div>
                 <a href="https://github.com/kywillpickle"><img src="media/logoGH.png" width=60px style="float: left; padding-right:10px; padding-left:25px;"></a>
                 <h3 style="float: left;"><a href="https://github.com/kywillpickle">kywillpickle</a></h3>
             </div>
