added minecraft section
also reorganized site images

--- a/index.html
+++ b/index.html
@@ -90,16 +90,16 @@
             <div class="item">
                 <div class="colL">
                     <div class="img">
-                        <img src="media/DSSBP_ex1.png" width=92%>
+                        <img src="/media/dss-badge-plus/ex1.png" width=92%>
                     </div>
                     <div class="img">
-                        <img src="media/DSSBP_ex2.png" width=92%>
+                        <img src="/media/dss-badge-plus/ex2.png" width=92%>
                     </div>
                     <div class="img">
-                        <img src="media/DSSBP_ex3.png" width=92%>
+                        <img src="/media/dss-badge-plus/ex3.png" width=92%>
                     </div>
                     <div class="img">
-                        <img src="media/DSSBP_ex4.png" width=92%>
+                        <img src="/media/dss-badge-plus/ex4.png" width=92%>
                     </div>
                 </div>
                 <div class="colR">
@@ -116,13 +116,13 @@
                     <div>
                         <a href="https://github.com/kywillpickle/DSSBadgePlus" target="_blank"><button>
                             <div class="button githubButton" style="display:inline-grid; height: 65px; width: 195px; align-items: center; justify-items: center; overflow: hidden;">
-                                <img style="grid-column: 1;" src="media/logoGH.png" width=60px>
+                                <img style="grid-column: 1;" src="/media/logos/GH.png" width=60px>
                                 <span style="align-content: left; grid-column: 2; margin-top: 8px; font-family: retrograde, sans-serif; font-size: x-large; color: white;">Github</span>
                             </div>
                         </button></a>
                         <a href="https://devpost.com/software/dssbadge" target="_blank"><button>
                             <div class="button devpostButton" style="display:inline-grid; height: 65px; width: 215px; align-items: center; justify-items: center; overflow: hidden;">
-                                <img style="grid-column: 1;" src="media/logoDEV.png" width=60px>
+                                <img style="grid-column: 1;" src="/media/logos/DEV.png" width=60px>
                                 <span style="grid-column: 2; margin-top: 8px; font-family: retrograde, sans-serif; font-size: x-large; color: white;">Devpost</span>
                             </div>
                         </button></a>
@@ -144,13 +144,13 @@
                     <div>
                         <a href="https://github.com/kywillpickle/Arboretum-Gallerium" target="_blank"><button>
                             <div class="button githubButton" style="display:inline-grid; height: 65px; width: 195px; align-items: center; justify-items: center; overflow: hidden;">
-                                <img style="grid-column: 1;" src="media/logoGH.png" width=60px>
+                                <img style="grid-column: 1;" src="/media/logos/GH.png" width=60px>
                                 <span style="align-content: left; grid-column: 2; margin-top: 8px; font-family: retrograde, sans-serif; font-size: x-large; color: white;">Github</span>
                             </div>
                         </button></a>
                         <a href="https://devpost.com/software/arboretum-gallerium" target="_blank"><button>
                             <div class="button devpostButton" style="display:inline-grid; height: 65px; width: 215px; align-items: center; justify-items: center; overflow: hidden;">
-                                <img style="grid-column: 1;" src="media/logoDEV.png" width=60px>
+                                <img style="grid-column: 1;" src="/media/logos/DEV.png" width=60px>
                                 <span style="grid-column: 2; margin-top: 8px; font-family: retrograde, sans-serif; font-size: x-large; color: white;">Devpost</span>
                             </div>
                         </button></a>
@@ -158,16 +158,16 @@
                 </div>
                 <div class="colR2">
                     <div class="img">
-                        <img src="media/AGScrSho1.png" width=92%>
+                        <img src="/media/arboretum-gallerium/ScrSho1.png" width=92%>
                     </div>
                     <div class="img">
-                        <img src="media/AGScrSho2.png" width=92%>
+                        <img src="/media/arboretum-gallerium/ScrSho2.png" width=92%>
                     </div>
                     <div class="img">
-                        <img src="media/AGScrSho3.png" width=92%>
+                        <img src="/media/arboretum-gallerium/ScrSho3.png" width=92%>
                     </div>
                     <div class="img">
-                        <img src="media/AGScrSho4.png" width=92%>
+                        <img src="/media/arboretum-gallerium/ScrSho4.png" width=92%>
                     </div>
                 </div>
             </div>
@@ -180,18 +180,18 @@
                 <div class="colL">
                     <div>
                         <div class="img">
-                            <img src="media/WvRsc2.png" width=92%>
+                            <img src="/media/wizards-vs-robots/sc2.png" width=92%>
                         </div>
                         <div class="img">
-                            <img src="media/WvRsr2.gif" width=92%>
+                            <img src="/media/wizards-vs-robots/sr2.gif" width=92%>
                         </div>
                     </div>
                     <div>
                         <div class="img">
-                            <img src="media/WvRsr1.gif" width=92%>
+                            <img src="/media/wizards-vs-robots/sr1.gif" width=92%>
                         </div>
                         <div class="img">
-                            <img src="media/WvRsc1.png" width=92%>
+                            <img src="/media/wizards-vs-robots/sc1.png" width=92%>
                         </div>
                     </div>
                 </div>
@@ -210,9 +210,9 @@
                     </p>
                     </div>
                     <a href="/wizardsvrobots/"><button>
-                        <div class="button playButton" style="overflow: hidden; display:inline-grid; height: 65px; width: 195px; align-items: center; justify-items: center;">
-                            <img style="grid-column: 1;" src="media/logoPLAY.png" width=60px>
-                            <span style="grid-column: 2; margin-top: 8px; font-family: retrograde, sans-serif; font-size: xx-large; color: white;">Play</span>
+                        <div class="button playButton" style="overflow: hidden; display:inline-grid; height: 65px; width: 255px; align-items: center; justify-items: center;">
+                            <img style="grid-column: 1;" src="/media/logos/PLAY.png" width=60px>
+                            <span style="grid-column: 2; margin-top: 8px; font-family: retrograde, sans-serif; font-size: xx-large; color: white;">Explore</span>
                         </div>
                     </button></a>
                 </div>
@@ -222,31 +222,29 @@
                 <div class="colR2">
                     <div>
                         <div class="img">
-                            <img src="media/FCsr1.gif" width=96%>
+                            <img src="/media/minecraft/FCsr1.gif" width=98%>
                         </div>
                     </div>
                     <div>
                         <div class="img">
-                            <img src="media/FCsc1.png" width=96%>
+                            <img src="/media/minecraft/rave_condensed.png" width=87.128% style="box-shadow: none;">
                         </div>
                     </div>
                 </div>
                 <div class="colL2">
                     <div>
                     <h2>
-                        FrogCraft
+                        Minecraft
                     </h2>
                     <p>
-                        FrogCraft is a Minecraft Forge mod for 1.16 that I started working on just before Summer 2021.
-                        Like Wizards vs Robots, I've been doing all of the coding, modeling, texturing, etc. by myself to get a better idea as to how to make minecraft mods.<br>
-                        The end-goal for this project is a lovecraftian-inspired mod centered around many different types of frogs, and their increasingly supernatural origin and lore. Cute on the suface, yet creepier as one dives deeper into the mod.<br><br>
-                        Unfortunately, FrogCraft is currently on hold as Mojang announced they will be releasing their own version of frogs in 2022. Once they're added I plan on starting from scratch off of the new model.
+                        Minecraft has played a huge role in my interest in both programming and game development, and I am always working on new projects to share with the community. I've assembled a portfolio with which to apply for the Minecraft Partner Program.<br><br>
+                        Click the link to see more!
                     </p>
                     </div>
-                    <a href="https://github.com/kywillpickle/FrogCraft" target="_blank"><button>
-                        <div class="githubButton" style="display:inline-grid; height: 65px; width: 195px; align-items: center; justify-items: center; overflow: hidden;">
-                            <img style="grid-column: 1;" src="media/logoGH.png" width=60px>
-                            <span style="grid-column: 2; margin-top: 8px; font-family: retrograde, sans-serif; font-size: x-large; color: white;">Github</span>
+                    <a href="/minecraft/"><button>
+                        <div class="button playButton" style="overflow: hidden; display:inline-grid; height: 65px; width: 255px; align-items: center; justify-items: center;">
+                            <img style="grid-column: 1;" src="/media/logos/PLAY.png" width=60px>
+                            <span style="grid-column: 2; margin-top: 8px; font-family: retrograde, sans-serif; font-size: xx-large; color: white;">Explore</span>
                         </div>
                     </button></a>
                 </div>
@@ -259,10 +257,10 @@
             </a></h1>
             <div>
                 <h3 style="float: right; padding-left:10px; padding-right: 25px;"><a href="mailto: kwpickle@ucdavis.edu">kwpickle@ucdavis.edu</a></h3>
-                <a href="mailto: kwpickle@ucdavis.edu"><img src="media/logoEMAIL.png" width=60px style="float: right;"></a>
+                <a href="mailto: kwpickle@ucdavis.edu"><img src="/media/logos/EMAIL.png" width=60px style="float: right;"></a>
             </div>
             <div>
-                <a href="https://github.com/kywillpickle"><img src="media/logoGH.png" width=60px style="float: left; padding-right:10px; padding-left:25px;"></a>
+                <a href="https://github.com/kywillpickle"><img src="/media/logos/GH.png" width=60px style="float: left; padding-right:10px; padding-left:25px;"></a>
                 <h3 style="float: left;"><a href="https://github.com/kywillpickle">kywillpickle</a></h3>
             </div>
         </section>
